--- a/index.html
+++ b/index.html
@@ -6,94 +6,297 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="./resources/ol.css">
-        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
-        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
-        <link rel="stylesheet" href="./resources/qgis2web.css">
-        <style>
-        .ol-geocoder.gcd-gl-container {
-            top: 65px!important;
-            left: .5em!important;
-            width: 2.1em!important;
-            height: 2.1em!important;
-        }
-        .ol-geocoder .gcd-gl-container{
-            width: 2.1em!important;
-            height: 2.1em!important;
-        }
-        .ol-geocoder .gcd-gl-control{
-            width: 2.1em!important;
-        }
-        .ol-geocoder .gcd-gl-expanded {
-            width: 15.625em!important;
-            height: 2.1875em;
-        }
-        .ol-touch .ol-geocoder.gcd-gl-container{
-            top: 80px!important;
-        }
-        .ol-geocoder .gcd-gl-btn {
-            width: 1.375em!important;
-            height: 1.375em!important;
-            top: .225em!important;
-            background-image: none!important;
-        }
-        </style>
-<style>
-.search-layer {
-  top: 100px;
-  left: .5em;
-}
-.ol-touch .search-layer {
-  top: 130px;
-}
-</style>
-        <style>
-        html, body {
-            background-color: #ffffff;
-        }
-        .ol-control button {
-            background-color: #f8f8f8 !important;
-            color: #000000 !important;
-            border-radius: 0px !important;
-        }
-        .ol-zoom, .geolocate, .gcd-gl-control .ol-control {
-            background-color: rgba(255,255,255,.4) !important;
-            padding: 3px !important;
-        }
-        .ol-scale-line {
-            background: none !important;
-        }
-        .ol-scale-line-inner {
-            border: 2px solid #f8f8f8 !important;
-            border-top: none !important;
-            background: rgba(255, 255, 255, 0.5) !important;
-            color: black !important;
-        }
-        </style>
-        <link href="resources/ol3-geocoder.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/leaflet.css">
+        <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/leaflet-control-geocoder.Geocoder.css">
         <style>
         #map {
             width: 1649px;
-            height: 791px;
+            height: 832px;
         }
         </style>
         <title>Offre de santé Claix 2020</title>
     </head>
     <body>
         <div id="map">
-            <div id="popup" class="ol-popup">
-                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-                <div id="popup-content"></div>
-            </div>
         </div>
-        <script src="resources/qgis2web_expressions.js"></script>
-        <script src="resources/polyfills.js"></script>
-        <script src="./resources/functions.js"></script>
-        <script src="./resources/ol.js"></script>
-        <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="resources/ol3-geocoder.js"></script>
-        <script src="./layers/layers.js" type="text/javascript"></script> 
-        <script src="./resources/Autolinker.min.js"></script>
-        <script src="./resources/qgis2web.js"></script>
+        <script src="js/qgis2web_expressions.js"></script>
+        <script src="js/leaflet.js"></script>
+        <script src="js/leaflet.rotatedMarker.js"></script>
+        <script src="js/leaflet.pattern.js"></script>
+        <script src="js/leaflet-hash.js"></script>
+        <script src="js/Autolinker.min.js"></script>
+        <script src="js/rbush.min.js"></script>
+        <script src="js/labelgun.min.js"></script>
+        <script src="js/labels.js"></script>
+        <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
+        <script src="data/Gnraliste_1.js"></script>
+        <script src="data/Infirmier_2.js"></script>
+        <script src="data/Kin_3.js"></script>
+        <script src="data/Dentiste_4.js"></script>
+        <script>
+        var highlightLayer;
+        function highlightFeature(e) {
+            highlightLayer = e.target;
+            highlightLayer.openPopup();
+        }
+        var map = L.map('map', {
+            zoomControl:true, maxZoom:28, minZoom:1
+        }).fitBounds([[45.079457380163106,5.657260952837344],[45.10691122174209,5.734429640591395]]);
+        var hash = new L.Hash(map);
+        map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
+        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
+        var bounds_group = new L.featureGroup([]);
+        function setBounds() {
+        }
+        map.createPane('pane_ESRIStandard_0');
+        map.getPane('pane_ESRIStandard_0').style.zIndex = 400;
+        var layer_ESRIStandard_0 = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/{z}/{y}/{x}', {
+            pane: 'pane_ESRIStandard_0',
+            opacity: 1.0,
+            attribution: '',
+            minZoom: 1,
+            maxZoom: 28,
+            minNativeZoom: 0,
+            maxNativeZoom: 20
+        });
+        layer_ESRIStandard_0;
+        map.addLayer(layer_ESRIStandard_0);
+        function pop_Gnraliste_1(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2"><strong>Générali</strong><br />' + (feature.properties['Générali'] !== null ? autolinker.link(feature.properties['Générali'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+        }
+
+        function style_Gnraliste_1_0() {
+            return {
+                pane: 'pane_Gnraliste_1',
+        rotationAngle: 0.0,
+        rotationOrigin: 'center center',
+        icon: L.icon({
+            iconUrl: 'markers/doctor.svg',
+            iconSize: [43.28959999999999, 43.28959999999999]
+        }),
+                interactive: true,
+            }
+        }
+        map.createPane('pane_Gnraliste_1');
+        map.getPane('pane_Gnraliste_1').style.zIndex = 401;
+        map.getPane('pane_Gnraliste_1').style['mix-blend-mode'] = 'normal';
+        var layer_Gnraliste_1 = new L.geoJson(json_Gnraliste_1, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_Gnraliste_1',
+            layerName: 'layer_Gnraliste_1',
+            pane: 'pane_Gnraliste_1',
+            onEachFeature: pop_Gnraliste_1,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.marker(latlng, style_Gnraliste_1_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_Gnraliste_1);
+        map.addLayer(layer_Gnraliste_1);
+        function pop_Infirmier_2(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2"><strong>Infirmier</strong><br />' + (feature.properties['Infirmier'] !== null ? autolinker.link(feature.properties['Infirmier'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+        }
+
+        function style_Infirmier_2_0() {
+            return {
+                pane: 'pane_Infirmier_2',
+        rotationAngle: 0.0,
+        rotationOrigin: 'center center',
+        icon: L.icon({
+            iconUrl: 'markers/nurse.svg',
+            iconSize: [38.912, 38.912]
+        }),
+                interactive: true,
+            }
+        }
+        map.createPane('pane_Infirmier_2');
+        map.getPane('pane_Infirmier_2').style.zIndex = 402;
+        map.getPane('pane_Infirmier_2').style['mix-blend-mode'] = 'normal';
+        var layer_Infirmier_2 = new L.geoJson(json_Infirmier_2, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_Infirmier_2',
+            layerName: 'layer_Infirmier_2',
+            pane: 'pane_Infirmier_2',
+            onEachFeature: pop_Infirmier_2,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.marker(latlng, style_Infirmier_2_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_Infirmier_2);
+        map.addLayer(layer_Infirmier_2);
+        function pop_Kin_3(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2"><strong>Kiné</strong><br />' + (feature.properties['Kiné'] !== null ? autolinker.link(feature.properties['Kiné'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+        }
+
+        function style_Kin_3_0() {
+            return {
+                pane: 'pane_Kin_3',
+        rotationAngle: 0.0,
+        rotationOrigin: 'center center',
+        icon: L.icon({
+            iconUrl: 'markers/physio.svg',
+            iconSize: [39.7119, 39.7119]
+        }),
+                interactive: true,
+            }
+        }
+        map.createPane('pane_Kin_3');
+        map.getPane('pane_Kin_3').style.zIndex = 403;
+        map.getPane('pane_Kin_3').style['mix-blend-mode'] = 'normal';
+        var layer_Kin_3 = new L.geoJson(json_Kin_3, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_Kin_3',
+            layerName: 'layer_Kin_3',
+            pane: 'pane_Kin_3',
+            onEachFeature: pop_Kin_3,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.marker(latlng, style_Kin_3_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_Kin_3);
+        map.addLayer(layer_Kin_3);
+        function pop_Dentiste_4(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2"><strong>Dentiste</strong><br />' + (feature.properties['Dentiste'] !== null ? autolinker.link(feature.properties['Dentiste'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+        }
+
+        function style_Dentiste_4_0() {
+            return {
+                pane: 'pane_Dentiste_4',
+        rotationAngle: 0.0,
+        rotationOrigin: 'center center',
+        icon: L.icon({
+            iconUrl: 'markers/dentist.svg',
+            iconSize: [31.767999999999997, 31.767999999999997]
+        }),
+                interactive: true,
+            }
+        }
+        map.createPane('pane_Dentiste_4');
+        map.getPane('pane_Dentiste_4').style.zIndex = 404;
+        map.getPane('pane_Dentiste_4').style['mix-blend-mode'] = 'normal';
+        var layer_Dentiste_4 = new L.geoJson(json_Dentiste_4, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_Dentiste_4',
+            layerName: 'layer_Dentiste_4',
+            pane: 'pane_Dentiste_4',
+            onEachFeature: pop_Dentiste_4,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.marker(latlng, style_Dentiste_4_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_Dentiste_4);
+        map.addLayer(layer_Dentiste_4);
+            var title = new L.Control();
+            title.onAdd = function (map) {
+                this._div = L.DomUtil.create('div', 'info');
+                this.update();
+                return this._div;
+            };
+            title.update = function () {
+                this._div.innerHTML = '<h2>Offre de santé Claix 2020</h2>';
+            };
+            title.addTo(map);
+        var osmGeocoder = new L.Control.Geocoder({
+            collapsed: true,
+            position: 'topleft',
+            text: 'Search',
+            title: 'Testing'
+        }).addTo(map);
+        document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
+        .className += ' fa fa-search';
+        document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
+        .title += 'Search for a place';
+        var baseMaps = {};
+        L.control.layers(baseMaps,{'<img src="legend/Dentiste_4.png" /> Dentiste': layer_Dentiste_4,'<img src="legend/Kin_3.png" /> Kiné': layer_Kin_3,'<img src="legend/Infirmier_2.png" /> Infirmier': layer_Infirmier_2,'<img src="legend/Gnraliste_1.png" /> Généraliste': layer_Gnraliste_1,"ESRI Standard": layer_ESRIStandard_0,}).addTo(map);
+        setBounds();
+        </script>
     </body>
 </html>
